--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,38 @@
+asn1crypto==0.23.0
+attrs==17.3.0
+Automat==0.6.0
+beautifulsoup4==4.6.0
+bluelens-log==1.0.1
+bluelens-spawning-pool==1.0.9
+certifi==2017.11.5
+cffi==1.11.2
+chardet==3.0.4
+constantly==15.1.0
+cryptography==2.1.4
+cssselect==1.0.1
+hyperlink==17.3.1
+idna==2.6
+incremental==17.5.0
+js2xml==0.3.1
+lxml==4.1.1
+parsel==1.2.0
+ply==3.10
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycparser==2.18
+PyDispatcher==2.0.5
+pyOpenSSL==17.5.0
+python-dateutil==2.6.1
+queuelib==1.4.2
+redis==2.10.6
+requests==2.18.4
 Scrapy==1.4.0
-google-api-python-client==1.6.4
-google-cloud-bigquery=0.27.0
+service-identity==17.0.0
+six==1.11.0
+slimit==0.8.1
+stylelens-crawl==0.0.102
+stylelens-product==1.0.17
+Twisted==17.9.0
+urllib3==1.22
+w3lib==1.18.0
+zope.interface==4.4.3
