--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asn1crypto==0.23.0
+asn1crypto==0.24.0
 attrs==17.3.0
 Automat==0.6.0
 beautifulsoup4==4.6.0
@@ -10,29 +10,35 @@ chardet==3.0.4
 constantly==15.1.0
 cryptography==2.1.4
 cssselect==1.0.1
+google-api-python-client==1.6.4
+httplib2==0.10.3
 hyperlink==17.3.1
 idna==2.6
 incremental==17.5.0
 js2xml==0.3.1
 lxml==4.1.1
+oauth2client==4.1.2
 parsel==1.2.0
 ply==3.10
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
 PyDispatcher==2.0.5
+pymongo==3.6.0
 pyOpenSSL==17.5.0
 python-dateutil==2.6.1
 queuelib==1.4.2
 redis==2.10.6
 requests==2.18.4
+rsa==3.4.2
 Scrapy==1.4.0
 service-identity==17.0.0
 six==1.11.0
 slimit==0.8.1
-stylelens-crawl==0.0.115
-stylelens-product==1.0.24
+stylelens-crawl==0.1.1
+stylelens-product==1.0.29
 Twisted==17.9.0
+uritemplate==3.0.0
 urllib3==1.22
 w3lib==1.18.0
 zope.interface==4.4.3
