Added a feature for Amazon

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Automat==0.6.0
 beautifulsoup4==4.6.0
 bluelens-log==1.0.2
 bluelens-spawning-pool==1.0.10
+bottlenose==1.1.8
+bs4==0.0.1
 certifi==2018.1.18
 cffi==1.11.4
 chardet==3.0.4
@@ -36,6 +38,7 @@ service-identity==17.0.0
 six==1.11.0
 slimit==0.8.1
 stylelens-crawl==0.1.108
+stylelens-crawl-amazon==0.0.18
 stylelens-product==1.0.68
 Twisted==17.9.0
 uritemplate==3.0.0
